<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="title_activity_payment_activity">payment_activity</string>
    <string name="welcome_text">$$$ Welcome To BudgetBuddy! $$$</string>
    <string name="prog">View Progress</string>
    <string name="expense">Add Purchase</string>
    <string name="hist">Expense History</string>
    <string name="create_template">Create a Savings Template"</string>
    <string name="savingButton">Start Saving! ◕‿◕"</string>
    <string name="select">Select a Savings Plan: "</string>
    <string name="profile">Profile Name: "</string>
    <string name="income">My Income: "</string>
    <string name="amount">Enter Amount: "</string>
    <string name="logPayment">Log Payment"</string>
    <string name="buy">What did you purchase? "</string>
    <string name="food">🍕☕"</string>
    <string name="party">🎉🎈"</string>
    <string name="transportation">🚌🚍"</string>
    <string name="other">Misc.</string>
    <string name="desc">Expense Description:</string>
    <string name="someProf">List Profiles:</string>
    <string name="someExpense">List Expenses:</string>
    <string name="some_hint">Search</string>
    <string name="viewPie">View Pie Chart</string>
    <string name="viewBar">View Bar Chart</string>
    <string name="viewLine">View Line Graph</string>
</resources>
