<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".expenseHistoryActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#5443A047"
        android:backgroundTint="#5443A047"
        android:padding="10dp"
        android:text="@string/someProf"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/myFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/some_hint">

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="202dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#5443A047"
        android:backgroundTint="#5443A047"
        android:padding="10dp"
        android:text="@string/someExpense"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/myFilter1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/some_hint">

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/listView2"
        android:layout_width="fill_parent"
        android:layout_height="246dp" />

</LinearLayout>


